nav alignment fix

--- a/styles/src/style.less
+++ b/styles/src/style.less
@@ -198,6 +198,8 @@ main {
 .is-sticky {
   .navbar-nav {
     margin-left: 0;
+    float: right;
+    margin-right: 213px;
   }
 }
 
